--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,6 @@ PORT=3333
 
 # Database
 DATABASE_URL="postgresql://docker:docker@localhost:5434/agents"
+
+# Gemini
+GEMINI_API_KEY="AIzaSyD2x0tjT2TfBRjgrk--CdfZ9tUktDnWI1c"
